test/robot-tests/src/source_files/test_metric_app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: prometheus-example-app
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/managed-by: monitoring-operator
  name: prometheus-example-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-example-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-example-app
    spec:
      securityContext: {}
      containers:
        - name: prometheus-example-app
          image: tbd  # TODO: convert to template
          ports:
            - name: web
              containerPort: 8080
