test/robot-tests/src/source_files/test_metric_app/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: infra-monitoring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tbs  # TODO: replace to template
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-operated
              servicePort: web
