test/robot-tests/src/source_files/test_metric_app/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: prometheus-example-app
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/managed-by: monitoring-operator
  name: prometheus-example-app
spec:
  type: NodePort
  labels:
    app.kubernetes.io/name: prometheus-example-app
  ports:
    - name: web
      nodePort: 31901
      port: 8080
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: prometheus-example-app
